tests/NormalTests/paczka1/fuzzy1/76273108.err
Error in line 2: uXfg A904 79,9
Error in line 7: 7U7PFyt7lO A9U4 42U,6
Error in line 6: 7U7PFyt7lO A904 89,1
Error in line 5: uXfg A392 62,7
Error in line 13: uXfg S698 29,0
Error in line 18: PyYBFws1aWc A44Y 67,3
Error in line 27: XUxi38H2y3f A904 63,6
Error in line 28: XUxi38H2y3f A392 13,4
Error in line 29: A392 A442 47,0
Error in line 25: 7U7PFyt7lO A904 17,2
